[package]
name = "njord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { git = "https://github.com/golemparts/rppal.git" }
ctrlc = "3.2.1"
crossbeam-channel = "0.5.2"
anyhow = "1.0.52"
ndarray = "0.15.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
